--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <section id="main">
-    <h1 id="main-heading"> SHORTEN Your Links !</h1>
+    <h1 id="main-heading"> Shorten Your Links !</h1>
     <div id="main-form">
       <form>
         <input type="text" placeholder="paste link here" name="original_url" />
@@ -25,7 +25,7 @@
     <div id="former-shorts">
       <div class="url-row">
         <div class='url-row-1'>https://www.youtube.com/playlist?list=PL3KxaFhnrdZDxy0Gk</div>
-        <div class='url-row-2'>https://bit.ly/2O1iVK3</div>
+        <div class='url-row-2'>https://bar.ly/2O1iVK3</div>
         <div class='url-row-3'>
           <button>copy</button>
         </div>
@@ -33,7 +33,7 @@
 
       <div class="url-row">
         <div class='url-row-1'>https://www.youtube.com/playlist?list=PL3KxaFhnrdZDxy0Gk</div>
-        <div class='url-row-2'>https://bit.ly/2O1iVK3</div>
+        <div class='url-row-2'>https://bar.ly/2O1iVK3</div>
         <div class='url-row-3'>
           <button>copy</button>
         </div>
@@ -41,7 +41,7 @@
 
       <div class="url-row">
         <div class='url-row-1'>https://www.youtube.com/playlist?list=PL3KxaFhnrdZDxy0Gk</div>
-        <div class='url-row-2'>https://bit.ly/2O1iVK3</div>
+        <div class='url-row-2'>https://bar.ly/2O1iVK3</div>
         <div class='url-row-3'>
           <button>copy</button>
         </div>
@@ -49,7 +49,7 @@
 
       <div class="url-row">
         <div class='url-row-1'>https://www.youtube.com/playlist?list=PL3KxaFhnrdZDxy0Gk</div>
-        <div class='url-row-2'>https://bit.ly/2O1iVK3</div>
+        <div class='url-row-2'>https://bar.ly/2O1iVK3</div>
         <div class='url-row-3'>
           <button>copy</button>
         </div>
@@ -57,7 +57,7 @@
 
       <div class="url-row">
         <div class='url-row-1'>https://www.youtube.com/playlist?list=PL3KxaFhnrdZDxy0Gk</div>
-        <div class='url-row-2'>https://bit.ly/2O1iVK3</div>
+        <div class='url-row-2'>https://bar.ly/2O1iVK3</div>
         <div class='url-row-3'>
           <button>copy</button>
         </div>
